# UNV

./: .gitignore  123.py  28_10.py  corr_proto.py  cv_odmr.py  d_3.csv  dd.csv  heatmap.py  impulse_odmr.py  localhost_tester.py  main.py  main_window.py  mapping.py  mapping_frame.py  mapping_proto.py  measure_delays.py  mirrors_speed_test.py  new_cv_odmr.py  new_odmr.py  new_odmr_v2.py  odmr.ui  odmr_app.py  odmr_app.ui  odmr_proto.py  packets.py  rabi.py  requirements.txt  test.py  test_new_.py  test_new_T2.py  test_new_T2_.py  test_new_T2_backup.py  to_test.py
application_v2/: backend.py  cv_odmr.py  impulse_odmr.py  odmr_app.py  packets.py
controllers/: mirrors_controller.py
hardware/: exceptions.py  mirrors.py  rigol_rw.py  spincore.py
models/: mirrors_model.py  rigol_model.py  spincore_model.py
protos/: corr_proto.py  odmr_proto.py
shared/SpinCore/: CMakeLists.txt  Spin.c  Spin.h  SpinCore.vcxproj  SpinCore.vcxproj.filters
shared/SpinCore/Debug/: vc143.idb
shared/SpinCore/Debug/SpinCore.tlog/: SpinCore.lastbuildstate
shared/SpinCore/x64/Debug/: Source.nativecodeanalysis.sarif  SpinCore.dll.recipe  SpinCore.exe.recipe  SpinCore.ilk  vc143.idb
shared/SpinCore/x64/Debug/SpinCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SpinCore.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
spincore_driver/: builder.py  spinapi.py
tests/: Mirror_V.py  mirrors_speed_test.py
ui/: MirrorsControlWidget.py
